fixed text alignment in chat list

--- a/src/Layout/Chat/Chat.css
+++ b/src/Layout/Chat/Chat.css
@@ -101,7 +101,6 @@
   color: cornflowerblue;
 }
 .text-message-style {
-  text-align: left;
   direction: rtl;
   font-family: Arial, Helvetica, sans-serif;
 }
